--- a/css/main.css
+++ b/css/main.css
@@ -124,3 +124,69 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+.nav_button {
+    border-radius: 3px;
+    color: #fff;
+    font-family: 'franklin', Arial, Helvetica, sans-serif;
+    padding: 10px;
+    background-color: #567b95;
+    border: solid #326891 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    margin: 3px;
+    float: right;
+    font-size: 11px;
+    line-height: 11px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+  }
+  
+  .nav_button:hover {
+    border: solid#326891 1px;
+    background: #326891;
+  }
+  
+  .navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 43px;
+    width: 100%;
+    border-bottom: solid 1px rgb(100, 100, 100);
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background: #fff;
+  }
+  
+  .navbar .navbarTitle {
+    font-size: 14px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 700;
+  }
+  
+  .left_items {
+    width: 300px;
+    justify-content: space-around;
+  }
+  
+  .centered_items {
+    width: auto;
+  }
+  
+  .centered_items img {
+    height: 30px;
+  }
+  
+  .right_items {
+    width: 300px;
+    justify-items: right;
+  }
+  
+  .nytLogo {
+    height: 40px;
+  }
