--- a/css/main.css
+++ b/css/main.css
@@ -620,3 +620,79 @@ h4 {
 .footer-vertical-grid {
   justify-content: space-around;
 }
+
+form {
+  margin: 2rem auto;
+  width: 38rem;
+  border-left: 1px double #6c6960;
+  box-shadow: 3px 3px 10px 10px rgba(0, 0, 0, 0.2);
+  height: 29rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+}
+
+form button {
+  background-color: #326891;
+  width: 40%;
+  outline: none;
+  border: none;
+  color: white;
+  padding: 0.5rem;
+  border-radius: 6px;
+}
+
+.form-div {
+  width: 60%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 10px;
+}
+
+.form-div > input[type="text"] {
+  height: 1.4rem;
+  width: 13rem;
+  border: 1px solid #d3d3d3;
+}
+
+form label {
+  font-weight: bold;
+}
+
+form h1 {
+  color: indigo;
+  text-transform: uppercase;
+}
+
+form textarea {
+  resize: none;
+  height: 6rem;
+  width: 70%;
+  outline: none;
+  border: 1px solid #d3d3d3;
+}
+
+form .opinion {
+  flex-direction: column;
+  display: block;
+  align-items: center;
+}
+
+form .opinion > .opi {
+  padding: 1rem;
+}
+
+form .opinion > .opi > input {
+  margin: 10px;
+  border: 2px solid black;
+}
+
+form .opinion > label {
+  margin: 4rem;
+  font-weight: bold;
+}
